--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ boto3 = "^1.17.7"
 boto3-stubs = {extras = ["ec2", "logs"], version = "^1.17.7"}
 GitPython = "^3.1.13"
 docker = "^4.4.4"
+requests = "^2.25.1"
 
 [tool.poetry.dev-dependencies]
 pytest-cov = "^2.11.1"
