--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ requests = "^2.25.1"
 
 [tool.poetry.dev-dependencies]
 pytest-cov = "^2.11.1"
+black = "^21.5b1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
