--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,8 +12,8 @@ packages = [
 python = "^3.8"
 rich = "^9.10.0"
 fire = "^0.4.0"
-boto3 = "^1.17.7"
-boto3-stubs = {extras = ["ec2", "logs"], version = "^1.17.7"}
+boto3 = "^1.21.0"
+boto3-stubs = {extras = ["ec2", "logs"], version = "^1.21.0"}
 GitPython = "^3.1.13"
 docker = "^4.4.4"
 requests = "^2.25.1"
@@ -21,6 +21,7 @@ requests = "^2.25.1"
 [tool.poetry.dev-dependencies]
 pytest-cov = "^2.11.1"
 black = "^21.5b1"
+bandit = "^1.7.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
