--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,9 +19,12 @@ docker = "^4.4.4"
 requests = "^2.25.1"
 
 [tool.poetry.dev-dependencies]
-pytest-cov = "^2.11.1"
-black = "^21.5b1"
 bandit = "^1.7.2"
+black = "^22.3.0"
+pytest-cov = "^2.11.1"
+
+[tool.bandit]
+skips = ["B104"]
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
