TEL-3093: bump python and pre-commit versions; add pr template
Co-authored-by: Tim Fothergill <67912934+TimothyFothergill@users.noreply.github.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,14 +10,14 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-boto3 = "1.17.7"
-boto3-stubs = {extras = ["ec2", "logs"], version = "1.17.7"}
+boto3 = "^1.24.94"
+boto3-stubs = {extras = ["ec2", "logs"], version = "^1.24.94"}
 docker = "^4.4.4"
 fire = "^0.4.0"
 GitPython = "^3.1.13"
-python = "^3.9"
+python = "^3.10"
 requests = "^2.25.1"
-rich = "9.10.0"
+rich = "^12.6.0"
 
 [tool.poetry.dev-dependencies]
 bandit = "^1.7.2"
