--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,29 +1,35 @@
 repos:
+  - repo: local
+    hooks:
+      - id: validate-tool-versions
+        name: Validate tool versions
+        entry: ./tools/check_tool_versions.sh
+        language: script
+        pass_filenames: false
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.3.0
     hooks:
       - id: no-commit-to-branch
+        args: [--branch, develop, --branch, main, --branch, master]
+        name: Don't commit to main branch
       - id: check-case-conflict
+        name: Check for case conflicts
       - id: check-merge-conflict
+        name: Check for merge conflicts
       - id: check-symlinks
+        name: Check for broken symlinks
       - id: check-json
+        name: Check for valid JSON
       - id: check-yaml
-        exclude: (kitchen.yml)
+        exclude: kitchen.yml
+        name: Check for valid YAML
       - id: detect-private-key
+        name: Check for private keys
       - id: trailing-whitespace
+        name: Fix trailing whitespaces
       - id: end-of-file-fixer
+        name: Fix missing end-of-file line returns
         exclude: repository.yaml
-  - repo: https://github.com/hmrc/security-git-hooks
-    rev: release/1.9.0
-    hooks:
-      - id: secrets_filecontent
-        name: Checking staged files for sensitive content
-        exclude: ".tar$|.gz$|.jar$|.7z$|.rar$|.bz2$|.zip$|.gzip$|.war$|.ear$|.xlsx$|.xls$|
-                  |.docx$|.doc$|.pptx$|.pdf$|.jpg$|.png$|.jpeg$|.tif$|.tiff$|.gif$|.bmp$|.webp$|.svg$|.ico$|.psd$|.exe$|.dll$|.dmg$|.de$|.rpm$"
-      - id: secrets_filename
-        name: Checking staged files for sensitive file types
-        exclude: ".tar$|.gz$|.jar$|.7z$|.rar$|.bz2$|.zip$|.gzip$|.war$|.ear$|.xlsx$|.xls$|
-                  |.docx$|.doc$|.pptx$|.pdf$|.jpg$|.png$|.jpeg$|.tif$|.tiff$|.gif$|.bmp$|.webp$|.svg$|.ico$|.psd$|.exe$|.dll$|.dmg$|.de$|.rpm$"
   - repo: https://github.com/asottile/reorder_python_imports
     rev: v3.8.5
     hooks:
@@ -42,3 +48,14 @@ repos:
         name: Run Bandit
         args: [-ll, -s, 'B104,B608']
         language_version: python3
+  - repo: https://github.com/hmrc/security-git-hooks
+    rev: release/1.9.0
+    hooks:
+      - id: secrets_filecontent
+        name: Checking staged files for sensitive content
+        exclude: ".tar$|.gz$|.jar$|.7z$|.rar$|.bz2$|.zip$|.gzip$|.war$|.ear$|.xlsx$|.xls$|
+                  |.docx$|.doc$|.pptx$|.pdf$|.jpg$|.png$|.jpeg$|.tif$|.tiff$|.gif$|.bmp$|.webp$|.svg$|.ico$|.psd$|.exe$|.dll$|.dmg$|.de$|.rpm$"
+      - id: secrets_filename
+        name: Checking staged files for sensitive file types
+        exclude: ".tar$|.gz$|.jar$|.7z$|.rar$|.bz2$|.zip$|.gzip$|.war$|.ear$|.xlsx$|.xls$|
+                  |.docx$|.doc$|.pptx$|.pdf$|.jpg$|.png$|.jpeg$|.tif$|.tiff$|.gif$|.bmp$|.webp$|.svg$|.ico$|.psd$|.exe$|.dll$|.dmg$|.de$|.rpm$"
