--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,7 +10,7 @@ repos:
     rev: v4.3.0
     hooks:
       - id: no-commit-to-branch
-        args: [--branch, develop, --branch, main, --branch, master]
+        args: [--branch, develop, --branch, main]
         name: Don't commit to main branch
       - id: check-case-conflict
         name: Check for case conflicts
